--- a/index.html
+++ b/index.html
@@ -255,8 +255,15 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
 	</center>
        
-   
+   	<h3>Simple image gallery</h3>
+	<p>
+		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+	</p>
 
+   
   </td>
   <td></td>
  </tr>
