--- a/nepton/main/index.html
+++ b/nepton/main/index.html
@@ -6,25 +6,25 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<!-- Add jQuery library -->
-	<script type="text/javascript" src="../lib/jquery-1.10.1.min.js"></script>
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77266_jquery.js"></script>
 
 	<!-- Add mousewheel plugin (this is optional) -->
-	<script type="text/javascript" src="../lib/jquery.mousewheel-3.0.6.pack.js"></script>
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77267_jquery_mousewheel.js"></script>
 
 	<!-- Add fancyBox main JS and CSS files -->
-	<script type="text/javascript" src="../source/jquery.fancybox.js?v=2.1.5"></script>
-	<link rel="stylesheet" type="text/css" href="../source/jquery.fancybox.css?v=2.1.5" media="screen" />
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77274_jquery_fancybox_js.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://os_extranet_files_test.s3.amazonaws.com/20509_77268_jquery_fancybox.css" media="screen" />
 
 	<!-- Add Button helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+	<link rel="stylesheet" type="text/css" href="http://os_extranet_files_test.s3.amazonaws.com/20509_77269_jquery_buttons.css" />
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77273_jquery_buttons_js.js"></script>
 
 	<!-- Add Thumbnail helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+	<link rel="stylesheet" type="text/css" href="http://os_extranet_files_test.s3.amazonaws.com/20509_77271_jquery_thumbs.css" />
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77272_jquery_thumbs_js.js"></script>
 
 	<!-- Add Media helper (this is optional) -->
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+	<script type="text/javascript" src="http://os_extranet_files_test.s3.amazonaws.com/20509_77270_jquery_media.js""></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -264,7 +264,7 @@
 		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>						<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-			<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 	</p>
 
    
