--- a/nepton/index.html
+++ b/nepton/index.html
@@ -251,6 +251,10 @@
 
 	<br><br><br>
 
+	<li><a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac">Youtube</a></li>
+	
+	<br><br><br>
+
 	<center><h3>Nepton Sales Pitch Video</h3>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
 	</center>
