--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 	<br><br><br>
 
-	<li><a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a></li>
+	<<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
 	
 	<br><br><br>
 
