--- a/index.html
+++ b/index.html
@@ -244,21 +244,15 @@
 	<center><blockquote class="imgur-embed-pub" lang="en" data-id="a/bGeD5"><a href="//imgur.com/a/bGeD5">nepton</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></center>
 	
 	<br><br><br>
-	
+
 	<center><h3>Nepton Prototyping Video</h3>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/l7pGpY8OVac" frameborder="0" allowfullscreen></iframe>
-	</center>
-
-	<br><br><br>
-
-	<<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
+	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
 	
 	<br><br><br>
 
-	<center><h3>Nepton Sales Pitch Video</h3>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/V-Qhom6LRfY" frameborder="0" allowfullscreen></iframe>
-	</center>
-       
+	<center><h3>Nepton Prototyping Video</h3>
+	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
+
    	<h3>Simple image gallery</h3>
 	<p>
 		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
