--- a/index.html
+++ b/index.html
@@ -250,9 +250,15 @@
 	
 	<br><br><br>
 
-	<center><h3>Nepton Prototyping Video</h3>
+	<center><h3>Nepton Sales Pitch Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
 
+	<br><br><br>
+	
+	<a class="fancybox fancybox.iframe" href="https://dl.dropboxusercontent.com/u/3456071/Lab%201%E2%80%93Basic%20Material%20Properties_JasonWong_SeanZabriskie.pdf">Testing</a>
+	
+	<br><br><br>
+	
    	<h3>Simple image gallery</h3>
 	<p>
 		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
