--- a/index.html
+++ b/index.html
@@ -241,14 +241,21 @@
 
 	
 	<center><h3>Nepton CAD Images</h3>
-	<center><blockquote class="imgur-embed-pub" lang="en" data-id="a/bGeD5"><a href="//imgur.com/a/bGeD5">nepton</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></center>
+	
+	<p>
+		<a class="fancybox" href="../cad/01.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="01_s.png"" alt="" /></a>
+		<a class="fancybox" href="../cad/02.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="02_s.png" alt="" /></a>
+		<a class="fancybox" href="../cad/03.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="03_s.png" alt="" /></a>
+		<a class="fancybox" href="../cad/04.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="04_s.png" alt="" /></a>
+	</p>
+	</center>
 	
 	<br><br><br>
 
 	<center><h3>Nepton Prototyping Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
 	
-	<br><br><br>
+	<br><br><br>	
 
 	<center><h3>Nepton Sales Pitch Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
@@ -258,19 +265,6 @@
 	<a class="fancybox fancybox.iframe" href="https://dl.dropboxusercontent.com/u/3456071/Lab%201%E2%80%93Basic%20Material%20Properties_JasonWong_SeanZabriskie.pdf">Testing</a>
 	
 	<br><br><br>
-	
-   	<h3>Simple image gallery</h3>
-	<p>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>						<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-			<a class="fancybox" href="http://i.imgur.com/WpAxVeC.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-	</p>
-
    
   </td>
   <td></td>
