--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
 	
 	<p>
 		<a class="fancybox" href="../cad/01.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="01_s.png" alt="" /></a>
-		<a class="fancybox" href="../cad/02.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="02_s.png" alt="" /></a>
+		<a class="fancybox" href="../cad/02.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 		<a class="fancybox" href="../cad/03.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="03_s.png" alt="" /></a>
-		<a class="fancybox" href="../cad/04.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="04_s.png" alt="" /></a>
+		<a class="fancybox" href="../cad/04.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 	</p>
 	</center>
 	
