--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	<center><h3>Nepton CAD Images</h3>
 	
 	<p>
-		<a class="fancybox" href="../cad/01.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="01_s.png" alt="" /></a>
+		<a class="fancybox" href="../cad/01.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="01s.png" alt="" /></a>
 		<a class="fancybox" href="../cad/02.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
 		<a class="fancybox" href="../cad/03.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="03_s.png" alt="" /></a>
 		<a class="fancybox" href="../cad/04.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
