--- a/index.html
+++ b/index.html
@@ -243,11 +243,12 @@
 	<center><h3>Nepton CAD Images</h3>
 	
 	<p>
-		<a class="fancybox" href="../cad/01.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="01s.png" alt="" /></a>
-		<a class="fancybox" href="../cad/02.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
-		<a class="fancybox" href="../cad/03.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="03_s.png" alt="" /></a>
-		<a class="fancybox" href="../cad/04.png" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="http://i.imgur.com/lYOENUM.png" alt="" /></a>
+		<a class="fancybox" href="https://dl.dropbox.com/s/nd9hhjbynns8r4f/cap.png?dl=0" data-fancybox-group="gallery" title="Cap"><img src="https://dl.dropbox.com/s/bjux2n7d8i7kv7f/cap_s.png?dl=0" alt="" /></a>
+		<a class="fancybox" href="https://dl.dropbox.com/s/gqfevfjtd651svy/heatingcoil.png?dl=0" data-fancybox-group="gallery" title="Heating Coil"><img src="https://dl.dropbox.com/s/8rxu6wovt73yec9/heatingcoil_s.png?dl=0" alt="" /></a>
+		<a class="fancybox" href="https://dl.dropbox.com/s/md6ya89ci4mi9me/innerbody.png?dl=0" data-fancybox-group="gallery" title="Inner Body"><img src="https://dl.dropbox.com/s/o3u7mdqdvuj77by/innerbody_s.png?dl=0" alt="" /></a>
+		<a class="fancybox" href="https://dl.dropbox.com/s/p9egeq2qj829hqh/nepton.png?dl=0" data-fancybox-group="gallery" title="Nepton"><img src="https://dl.dropbox.com/s/kze390m4ynr65fq/nepton_s.png?dl=0" alt="" /></a>
 	</p>
+
 	</center>
 	
 	<br><br><br>
