--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
  
 <body bgcolor='#FFFFFF' topmargin='0' leftmargin='0' marginheight='0' marginwidth='0'>
 
-<img src="https://dl.dropboxusercontent.com/u/3456071/nepton_logo.png">
+<img src="https://dl.dropbox.com/s/8l3nrvpd6op72bz/logo.png?dl=0">
 
 <!-- BODY -->
 <table class='body-wrap' bgcolor=''>
@@ -239,6 +239,9 @@
 	<br><br><br>
 	
 
+	<center><h3>Nepton Abstract</h3>
+		<a class="fancybox fancybox.iframe" href="https://dl.dropbox.com/s/ie5homs7qsvhsvv/abstract.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
+	</center>
 	
 	<center><h3>Nepton CAD Images</h3>
 	
@@ -262,8 +265,6 @@
 	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
 
 	<br><br><br>
-	
-	<a class="fancybox fancybox.iframe" href="https://dl.dropboxusercontent.com/u/3456071/Lab%201%E2%80%93Basic%20Material%20Properties_JasonWong_SeanZabriskie.pdf">Testing</a>
 	
 	<br><br><br>
    
