--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 	
 
 	<center><h3>Nepton Abstract</h3>
-		<a class="fancybox fancybox.iframe" href="https://dl.dropboxusercontent.com/u/3456071/Lab%201%E2%80%93Basic%20Material%20Properties_JasonWong_SeanZabriskie.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
+		<a class="fancybox fancybox.iframe" href="../assets/abstract.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
 	</center>
 	
 	<br><br><br>
