--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
 <title>CSA</title>
  
-<link rel='stylesheet' type='text/css' href='https://dl.dropboxusercontent.com/u/3456071/nepton.css' >
+<link rel='stylesheet' type='text/css' href='../source/nepton.css' >
 
 </head>
  
