--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 <meta name='viewport' content='width=device-width' />
 
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-<title>CSA</title>
+<title>Team Nepton</title>
  
 <link rel='stylesheet' type='text/css' href='../source/nepton.css' >
 
