--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	
 	<br><br><br>
 	
-	<embed src="../test/index.html" width="200" height="200">
+	<center><embed src="../test/index.html" width="800" height="1000"></center>
 	
 	<center><h3>Nepton CAD Images</h3>
 	
