--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	
 	<br><br><br>
 	
-	<center><embed src="../test/index.html" width="800" height="1000" scale="tofit"/></center>
+	<center><embed src="../test/index.html#view=FitH" width="800" height="1000"/></center>
 	
 	<center><h3>Nepton CAD Images</h3>
 	
