--- a/index.html
+++ b/index.html
@@ -239,13 +239,15 @@
 	<br><br><br>
 	
 
-	<center><h3>Nepton Abstract</h3>
+	<!-- <center><h3>Nepton Abstract</h3>
 		<a class="fancybox fancybox.iframe" href="../assets/abstract.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
-	</center>
+	</center> 
 	
-	<br><br><br>
+	<br><br><br> -->
 	
 	<center><embed src="../test/index.html#view=FitH" width="1000" height="1200"/></center>
+	
+	<br><br><br>
 	
 	<center><h3>Nepton CAD Images</h3>
 	
