--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@
 	
 	<center><embed src="../test/index.html#view=FitH" width="1000" height="1200"/></center>
 	
+	<br>
+	
+	<center><object data="../assets/report.pdf" type="application/pdf" width="100%" height="100%"></center>
+	
 	<br><br><br>
 	
 	<center><h3>Nepton CAD Images</h3>
