--- a/index.html
+++ b/index.html
@@ -262,12 +262,11 @@
 	
 	<br><br><br>
 
-	<center><h3>Nepton Prototyping Video</h3>
+	<h3>Nepton Prototyping Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
 	
-	<br><br><br>	
 
-	<center><h3>Nepton Sales Pitch Video</h3>
+	<h3>Nepton Sales Pitch Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
 
 	<br><br><br>
