--- a/index.html
+++ b/index.html
@@ -262,6 +262,15 @@
 	
 	<br><br><br>
 
+	
+	<div style="float:left;width:auto;margin-right:14px;">
+	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
+	</div>
+	<div style="float:left;width:auto;">
+	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
+	</div>
+	<div style="clear:both;height:1em;"></div>
+	
 	<h3>Nepton Prototyping Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
 	
