--- a/index.html
+++ b/index.html
@@ -258,18 +258,17 @@
 		<a class="fancybox" href="https://dl.dropbox.com/s/p9egeq2qj829hqh/nepton.png?dl=0" data-fancybox-group="gallery" title="Nepton"><img src="https://dl.dropbox.com/s/kze390m4ynr65fq/nepton_s.png?dl=0" alt="" /></a>
 	</p>
 
-	</center>
+	
 	
 	<br><br><br>
 
+	</center>
 	
-	<div style="float:left;width:auto;margin-right:14px;">
-	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
-	</div>
-	<div style="float:left;width:auto;">
-	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
-	</div>
-	<div style="clear:both;height:1em;"></div>
+	<div style=”float:left;width:auto;margin-right:14px;”><a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a></div>
+	<div style=”float:left;width:auto;”><a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a></div> <div style=”clear:both;height:1em;”></div>
+	
+
+	<center>
 	
 	<h3>Nepton Prototyping Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
@@ -278,6 +277,8 @@
 	<h3>Nepton Sales Pitch Video</h3>
 	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
 
+	</center>
+	
 	<br><br><br>
 	
 	<br><br><br>
