--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@
 	
 	<br><br><br>
 	
+	<table width="500" border="1" cellpadding="5">
+
+	<tr>
+
+	<td align="center" valign="center">
+
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALCAAAAJDMyZTBlNDYyLTRhYTctNDY1OC1iNTUzLTkyYTYwMWZmMDk5OQ.jpg" height=100 width=100 alt="description here" />
+	</td>
+
+	<td align="Left" valign="center">
+	Hyun June Ferrabolli<br>Mechanical Engineering
+	</td>
+
+</tr>
+
+</table>
+	
 
 	<!-- <center><h3>Nepton Abstract</h3>
 		<a class="fancybox fancybox.iframe" href="../assets/abstract.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
