--- a/index.html
+++ b/index.html
@@ -238,22 +238,29 @@
 	
 	<br><br><br>
 	
-	<table width="500" border="1" cellpadding="5">
+	<center><table width="800" border="0" cellpadding="1">
 
-	<tr>
+	<tr>	
 
 	<td align="center" valign="center">
-
 	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALCAAAAJDMyZTBlNDYyLTRhYTctNDY1OC1iNTUzLTkyYTYwMWZmMDk5OQ.jpg" height=100 width=100 alt="description here" />
 	</td>
 
 	<td align="Left" valign="center">
 	Hyun June Ferrabolli<br>Mechanical Engineering
 	</td>
+	
+	<td align="center" valign="center">
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	</td>
 
-</tr>
+	<td align="Left" valign="center">
+	Jonathan Wong<br>Computer Engineering
+	</td>
 
-</table>
+	</tr>
+
+	</table></center>
 	
 
 	<!-- <center><h3>Nepton Abstract</h3>
