--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	Hyun June Ferrabolli<br>Mechanical Engineering
+	<b>Project Leader</b><br>Hyun June Ferrabolli<br>Mechanical Engineering
 	</td>
 	
 	<td align="center" valign="center">
@@ -255,7 +255,23 @@
 	</td>
 
 	<td align="Left" valign="center">
-	Jonathan Wong<br>Computer Engineering
+	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
+	</td>
+	
+	<td align="center" valign="center">
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	</td>
+
+	<td align="Left" valign="center">
+	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
+	</td>
+	
+	<td align="center" valign="center">
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	</td>
+
+	<td align="Left" valign="center">
+	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
 	</td>
 
 	</tr>
