--- a/index.html
+++ b/index.html
@@ -266,22 +266,23 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
+	<b>Product Engineer</b><br>Jason Wong<br>Mechanical Engineering
 	</td>
 	
 	<td align="center" valign="center">
-	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	<img src="../nutting2.jpg" height=100 width=100 alt="description here" />
 	</td>
 
 	<td align="Left" valign="center">
-	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
+	<b>Mechanical Design</b><br>Ryan Chen<br>Mechanical Engineering
 	</td>	
 
 	</tr>
 
 	</table></center>
 	
-
+	<br><br><br>
+	
 	<!-- <center><h3>Nepton Abstract</h3>
 		<a class="fancybox fancybox.iframe" href="../assets/abstract.pdf"><img src="https://dl.dropbox.com/s/zatssz7eiru23t5/abstract_t.png"></a>
 	</center> 
