--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
 	
 	<br><br><br>
 	
-	<center><table width="800" border="0" cellpadding="1">
+	<center><table width="750" border="0" cellpadding="1">
 
 	<tr>	
 
 	<td align="center" valign="center">
-	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALCAAAAJDMyZTBlNDYyLTRhYTctNDY1OC1iNTUzLTkyYTYwMWZmMDk5OQ.jpg" height=100 width=100 alt="description here" />
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALCAAAAJDMyZTBlNDYyLTRhYTctNDY1OC1iNTUzLTkyYTYwMWZmMDk5OQ.jpg" height=100 width=100 alt="Profile Picture" />
 	</td>
 
 	<td align="Left" valign="center">
@@ -251,7 +251,7 @@
 	</td>
 	
 	<td align="center" valign="center">
-	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="Profile Picture" />
 	</td>
 
 	<td align="Left" valign="center">
@@ -262,7 +262,7 @@
 	<tr>
 	
 	<td align="center" valign="center">
-	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0aa/08d/0c7b0ea.jpg" height=100 width=100 alt="description here" />
+	<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/09d/2b1/1cdda4e.jpg" height=100 width=100 alt="Profile Picture" />
 	</td>
 
 	<td align="Left" valign="center">
@@ -270,7 +270,7 @@
 	</td>
 	
 	<td align="center" valign="center">
-	<img src="../nutting2.jpg" height=100 width=100 alt="description here" />
+	<img src="../nutting2.jpg" height=100 width=100 alt="Profile Picture" />
 	</td>
 
 	<td align="Left" valign="center">
