--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Mechanical Design</b><br>Ryan Chen<br>Mechanical Engineering
+	<b>Mechanical Design & Drafter</b><br>Ryan Chen<br>Mechanical Engineering
 	</td>	
 
 	</tr>
