--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
 	
 	<br><br><br>
 	
-	<center><table width="750" border="0" cellpadding="1">
+	<center><h3>The Team</h3>
+	
+	<center><table width="750" border="0" cellpadding="1" bgcolor="ECF8FF">
 
 	<tr>	
 
