--- a/index.html
+++ b/index.html
@@ -238,9 +238,14 @@
 	
 	<br><br><br>
 	
-	<center><h3>The Team</h3>
+	<center><table width="750" border="0" cellpadding="3" bgcolor="ECF8FF">
+	<tr>
+	<td align="center" valign="center">
+	<h3>The Team</h3>
+	</td>
+	</table></center>
 	
-	<center><table width="750" border="0" cellpadding="1" bgcolor="ECF8FF">
+	<center><table width="750" border="0" cellpadding="3" bgcolor="ECF8FF">
 
 	<tr>	
 
