--- a/index.html
+++ b/index.html
@@ -238,14 +238,10 @@
 	
 	<br><br><br>
 	
-	<center><table width="750" border="0" cellpadding="3" bgcolor="ECF8FF">
-	<tr>
-	<td align="center" valign="center">
-	<h3>The Team</h3>
-	</td>
-	</table></center>
+
+	<center><h3>The Team</h3></center>
 	
-	<center><table width="750" border="0" cellpadding="3" bgcolor="ECF8FF">
+	<center><table width="750" border="0" cellpadding="3">
 
 	<tr>	
 
@@ -266,6 +262,7 @@
 	</td>
 	
 	</tr>
+	<br>
 	<tr>
 	
 	<td align="center" valign="center">
