--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Project Leader</b><br>Hyun June Ferrabolli<br>Mechanical Engineering
+	<b>Project Leader</b><br><a href="https://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a><br>Mechanical Engineering
 	</td>
 	
 	<td align="center" valign="center">
@@ -258,7 +258,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>ECE & Software Developer</b><br>Jonathan Wong<br>Computer Engineering
+	<b>ECE & Software Developer</b><br><a href="https://www.linkedin.com/in/jwong6">Jonathan Wong</a><br>Computer Engineering
 	</td>
 	
 	</tr>
@@ -270,7 +270,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Product Engineer</b><br>Jason Wong<br>Mechanical Engineering
+	<b>Product Engineer</b><br><a href="https://www.linkedin.com/in/jsnswong">Jason Wong</a><br>Mechanical Engineering
 	</td>
 	
 	<td align="center" valign="center">
