--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
  <tr>
   <td></td>
   <td class='container' align='' bgcolor='#FFFFFF'>
-   
+   <body link="black">
    <br><br><br>
 
     <p class='callout'><b>― 1st place in SASE Northeast Regional Conference out of 10+ teams ―<br>― 1st place in SASE National Midterm Review (product concept & presentation) ―<br>― 1st place winner overall in SASE National InnoService Competition out of 16+ teams ―</b></p>
