--- a/index.html
+++ b/index.html
@@ -232,15 +232,14 @@
   <td></td>
   <td class='container' align='' bgcolor='#FFFFFF'>
 
-	<body link="#000000">
-
+	<font color="black">
+  
 	<br><br><br>
 
     <p class='callout'><b>― 1st place in SASE Northeast Regional Conference out of 10+ teams ―<br>― 1st place in SASE National Midterm Review (product concept & presentation) ―<br>― 1st place winner overall in SASE National InnoService Competition out of 16+ teams ―</b></p>
 	
 	<br><br><br>
 	
-
 	<center><h3>The Team</h3></center>
 	
 	<center><table width="750" border="0" cellpadding="3">
@@ -329,6 +328,8 @@
 	<br><br><br>
 	
 	<br><br><br>
+   
+	</font>
    
   </td>
   <td></td>
