--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Mechanical Design & Drafter</b><br>Ryan Chen<br>Mechanical Engineering
+	<b>Mechanical Design & Drafter</b><br><a href="https://www.linkedin.com/pub/ryan-chen/73/77a/328">Ryan Chen</a><br>Mechanical Engineering
 	</td>	
 
 	</tr>
