--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 	</td>
 	
 	<td align="center" valign="center">
-	<img src="../nutting2.jpg" height=100 width=100 alt="Profile Picture" />
+	<img src="../assets/ryan.jpg" height=100 width=100 alt="Profile Picture" />
 	</td>
 
 	<td align="Left" valign="center">
