--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 	<center>
 	
 	<h3>Nepton Prototyping Video</h3>
-	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../test.jpg"></a>
+	<a class="fancybox-media" href="https://www.youtube.com/embed/l7pGpY8OVac"><img src="../assets/thumb_prototype.jpg"></a>
 	
 	<br><br>
 	
 	<h3>Nepton Sales Pitch Video</h3>
-	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../test.jpg"></a>
+	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../thumb_salespitch.jpg"></a>
 
 	</center>
 	
