--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 	<br><br>
 	
 	<h3>Nepton Sales Pitch Video</h3>
-	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../thumb_salespitch.jpg"></a>
+	<a class="fancybox-media" href="https://www.youtube.com/embed/V-Qhom6LRfY"><img src="../assets/thumb_salespitch.jpg"></a>
 
 	</center>
 	
