--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
  </tr>
 </table><!-- /BODY -->
 
+<img src="../assets/footer.jpg">
+
 <script src="lib/jquery-2.0.3.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
 
