--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
  
 <body bgcolor='#FFFFFF' topmargin='0' leftmargin='0' marginheight='0' marginwidth='0'>
 
-<img src="https://dl.dropbox.com/s/8l3nrvpd6op72bz/logo.png?dl=0">
+<center><img src="https://dl.dropbox.com/s/8l3nrvpd6op72bz/logo.png?dl=0"></center>
 
 <!-- BODY -->
 <table class='body-wrap' bgcolor=''>
@@ -332,7 +332,7 @@
  </tr>
 </table><!-- /BODY -->
 
-<img src="../assets/footer.jpg">
+<center><img src="../assets/footer.jpg"></center>
 
 <script src="lib/jquery-2.0.3.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
