--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   
 	<br><br><br>
 
-    <p class='callout'><b>« 1st place in SASE Northeast Regional Conference out of 10+ teams »<br>‹ 1st place in SASE National Midterm Review (product concept & presentation) ›<br>― 1st place winner overall in SASE National InnoService Competition out of 16+ teams ―</b></p>
+    <p class='callout'><b>« 1st place in SASE Northeast Regional Conference out of 10+ teams »<br>« 1st place in SASE National Midterm Review (product concept & presentation) »<br>« 1st place winner overall in SASE National InnoService Competition out of 16+ teams »</b></p>
 	
 	<br>
 	
