--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
  
 <body bgcolor='#FFFFFF' topmargin='0' leftmargin='0' marginheight='0' marginwidth='0'>
 
-<center><img src="https://dl.dropbox.com/s/8l3nrvpd6op72bz/logo.png?dl=0"></center>
+<center><img src="../assets/header.jpg"></center>
 
 <!-- BODY -->
 <table class='body-wrap' bgcolor=''>
