--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 	</td>
 
 	<td align="Left" valign="center">
-	<b>Project Leader</b><br><a href="https://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a><br>Mechanical Engineering
+	<b>Project Leader</b><br><a href="https://www.linkedin.com/in/hjferra">Hyun June Ferrabolli</a><br>Mechanical Engineering<br>Professional Griller
 	</td>
 	
 	<td align="center" valign="center">
